add-director: исправление